# EasyFormCV

./: .context.md  .env  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  render.yaml  tatus
apps/api/: package.json  prisma.config.ts  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/lib/: env.ts  json.ts  prisma.ts  target-url.ts
apps/api/src/routes/: cv.ts  forms.ts  runs.ts
apps/data/db/: easyformcv.db
apps/web/: index.html
apps/web/src/app/: App.tsx
apps/web/src/features/cv-upload/: CvUpload.tsx
apps/web/src/features/dashboard/: Dashboard.tsx
apps/web/src/features/profile-editor/: ProfileEditor.tsx
apps/web/src/lib/: api.test.ts  api.ts  i18n.tsx
data/db/: easyformcv.db
data/logs/runs/863fb4e5-9fab-4650-8f37-a1bab77fe13c/: report.json
docs/: add-architecture.md  architecture.md
services/browser-automation/: Dockerfile  pyproject.toml
services/browser-automation/app/: main.py
services/browser-automation/easyformcv_browser_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/browser-automation/tests/: test_main.py
services/browser-automation/tests/fixtures/: sample_form.html
services/pdf-parser/: Dockerfile  pyproject.toml
services/pdf-parser/app/: main.py
services/pdf-parser/easyformcv_pdf_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/pdf-parser/tests/: test_integration.py  test_main.py  test_security.py
